# Dengel-TextEditor

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  premake5.lua
lib/core/: CMakeLists.txt  Rope.cpp  Rope.hpp  hello.cpp  hello.h  premake5.lua
lib/ui/: CMakeLists.txt  Window.cpp  Window.hpp  premake5.lua  window.cpp  window.h
src/: Application.cpp  Application.hpp  CMakeLists.txt  main.cpp  premake5.lua
